[fix] fix text align issue

--- a/app/assets/stylesheets/partials/_layout.css.sass
+++ b/app/assets/stylesheets/partials/_layout.css.sass
@@ -29,7 +29,6 @@ html, body
   margin-top: 1em
   +border-radius(6px)
 %landing-form-style
-  text-align: left
   input, input:focus
     margin-bottom: 0
     padding: 3em
